# chucky

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.coverage  Dockerfile.cpu  LICENSE  README.md  build.ninja  codecov.yml  docker-compose.yml  flake.nix  vcpkg.json
.github/workflows/: ci.yml  pages.yml
bench/: CMakeLists.txt  bench_parse.c  bench_parse.h  bench_report.c  bench_report.h  bench_scatter_lut.c  bench_stream_256cube_multiscale.c  bench_stream_256cube_multiscale_dim0.c  bench_stream_256cube_single.c  bench_stream_256cube_two_streams.c  bench_stream_medfmt_multiscale.c  bench_stream_medfmt_multiscale_dim0.c  bench_stream_medfmt_single.c  bench_stream_orca2_multiscale.c  bench_stream_orca2_multiscale_dim0.c  bench_stream_orca2_single.c  bench_stream_smallepoch_single.c  bench_util.c  bench_util.h  bench_zarr.c  bench_zarr.h  sink_discard.c  sink_discard.h  sink_metering.c  sink_metering.h  sink_throttled.c  sink_throttled.h
bench/results/: LiveScreen-1-9907946-20260323.json  LiveScreen-1-a799de5-20260320.json  auk-23a88ff-20260318.json  auk-832e5bf-20260412.json  auk-ca04b82-20260319.json  auk-d62fd7e-20260321.json  oreb-26fbda8-20260413.json  oreb-51a3c03-20260319.json
cmake/: Blosc.cmake  Coverage.cmake  CoverageReport.cmake  CoverageRunTests.cmake  FindBlosc.cmake  FindLz4.cmake  FindNvcomp.cmake  FindZstd.cmake  Gpu.cmake  Lz4.cmake  Msvc.cmake  Nix.cmake  OpenMP.cmake  Warnings.cmake  Zstd.cmake
docs/: bench-layout-policy.md  design.md  devlog.md  formats.md  guide.md  s3-guide.md  sharding.md  streaming.md  style.md
scripts/: serve.py  view.py
scripts/sweep/: models.py  report.py  sweep.py  template.html
scripts/sweep/schema/: results.schema.json  run.schema.json
src/: CMakeLists.txt  aggregate.cu  aggregate.h  chucky_log.h  compress.cu  compress.h  crc32c.c  crc32c.h  defs.limits.h  dimension.c  dimension.h  downsample.cu  downsample.h  dtype.c  dtype.h  flush_compress_agg.c  flush_compress_agg.h  flush_d2h_deliver.c  flush_d2h_deliver.h  flush_handoff.h  flush_helpers.h  hcs.h  index.ops.c  index.ops.h  io_queue.h  io_queue.posix.c  io_queue.win32.c  json_writer.c  json_writer.h  lib.cc  lib.hh  lod.cu  lod.h  lod_plan.c  lod_plan.h  metric.cuda.h  metric.h  multiarray.cpu.h  multiarray.gpu.h  ngff.h  (+45 more)
src/cpu/: CMakeLists.txt  aggregate.c  aggregate.h  compress.c  compress.h  compress_blosc.c  compress_blosc.h  compress_blosc_stub.c  lod.cpp  lod.h  pipeline.c  pipeline.h  stream.body.c  stream.body.h  stream.c  stream.h  stream.internal.h  transpose.c  transpose.cpp  transpose.h
src/gpu/: CMakeLists.txt  aggregate.cu  aggregate.h  compress.cu  flush.compress_agg.c  flush.d2h_deliver.c  flush.d2h_deliver.h  lod.cu  lod.h  metric.cuda.h  reduce_csr_gpu.c  reduce_csr_gpu.h  stream.c  stream.engine.h  stream.flush.c  stream.flush.h  stream.h  stream.init.c  stream.internal.h  stream.lod.c  stream.lod.h
src/hcs/: CMakeLists.txt  hcs.c  hcs.h  hcs_metadata.c  hcs_metadata.h
src/lod/: lod_plan.c  lod_plan.h  reduce_csr.c  reduce_csr.h
src/log/: log.c  log.h
src/multiarray/: CMakeLists.txt  multiarray.h  stream.c  stream.gpu.c
src/ngff/: CMakeLists.txt  ngff_axis.h  ngff_metadata.c  ngff_metadata.h  ngff_multiscale.c  ngff_multiscale.h
src/platform/: platform.h  platform.posix.c  platform.win32.c  platform_io.h  platform_io.posix.c  platform_io.win32.c
src/stream/: config.c  config.h  dim_info.c  dim_info.h  layouts.h  types.aggregate.c
src/util/: ceildiv.h  format_bytes.c  format_bytes.h  prelude.h
src/zarr/: CMakeLists.txt  attr_set.c  attr_set.h  crc32c.c  crc32c.h  json_validate.c  json_validate.h  json_writer.c  json_writer.h  s3_client.c  s3_client.h  shard_delivery.c  shard_delivery.h  shard_pool.h  shard_pool_fs.c  shard_pool_fs.h  shard_pool_s3.c  shard_pool_s3.h  store.h  store_fs.c  store_fs.h  store_s3.c  store_s3.h  zarr_array.c  zarr_array.h  zarr_fs_sink.c  zarr_fs_sink.h  zarr_group.c  zarr_group.h  zarr_metadata.c  zarr_metadata.h  zarr_s3_sink.c  zarr_s3_sink.h
tests/: CMakeLists.txt  div.avx2.c  div.avx2.h  driver.c  index.ops.avx2.c  index.ops.c  index.ops.cuda.c  index.ops.util.c  index.ops.util.h  morton.c  morton.util.c  morton.util.h  test.c  test_aggregate.c  test_aggregate_cpu.c  test_avx2_div.c  test_batch.c  test_bench.c  test_chucky_log.c  test_compress.c  test_compress_agg.c  test_compress_cpu.c  test_cpu_zarr_fs.c  test_cross_validate.c  test_ctx_null.c  test_d2h_deliver.c  test_data.c  test_data.h  test_dimension.c  test_downsample.c  test_flush_orchestration.c  test_gpu_helpers.c  test_gpu_helpers.h  test_hcs.c  test_hcs_attribute.c  test_index_ops.c  test_ingest.c  test_io_queue.c  test_json_writer.c  test_lod.c  (+44 more)
tests/experiments/: CMakeLists.txt  index.ops.avx2.c  index.ops.c  index.ops.cuda.c  morton.c
